<resources>
    <string name="app_name">ECommerce</string>
    <string name="register">Inscription</string>
    <string name="mail">Email</string>
    <string name="validate">Valider</string>
    <string name="create">Créer</string>
    <string name="password">Mot de passe</string>
    <string name="password2">Confirmer votre mot de passe</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="is_merchant">Fournisseurs?</string>
    <string name="toggle_identification_from_signup">Se connecter ?</string>
    <string name="toggle_identification_from_signin">Inscription?</string>
    <string name="stay_connected">Rester connecté?</string>
    <string name="login">Login</string>
    <string name="create_store">Creer une boutique</string>
    <string name="menu">Menu</string>
    <string name="categories">Catégories</string>
    <string name="add_category">Ajouter catégorie</string>
    <string name="add_product">Ajouter produit</string>
    <string name="products">Produits</string>
    <string name="add_a_category">Add a category</string>
    <string name="add_a_category_to">Add a category to\ </string>
    <string name="category_name">Category name</string>
    <string name="product_name">Product name</string>
    <string name="details">Details</string>
    <string name="product_picture">Product picture</string>
    <string name="price">Price</string>
    <string name="go_register">Create new account</string>
    <string name="my_categories">My categories</string>
    <string name="my_products">My products</string>
    <string name="my_orders">My orders</string>
    <string name="orders">Orders</string>
    <string name="basket">Basket</string>
    <string name="name_of_your_store">Name of your store</string>
    <string name="DBCLEAR">dbclear</string>
    <string name="prod_interesting">Products that may be interesting for you</string>
    <string name="find_a_store">Find a store</string>
    <string name="your_orders">Your orders</string>
    <string name="find_a_product">Find a product</string>
    <string name="search_a_store">Search a store</string>
    <string name="content_description">content_description</string>
    <string name="search_a_product">Search a product</string>
    <string name="consult_categories">Consult categories of this store</string>
    <string name="consult_products">Consult products of this store</string>
    <string name="categories_of">Categories of\ </string>
    <string name="products_of">Products of\ </string>
    <string name="order_at">Order at\ </string>
    <string name="space_of_space">\ of\ </string>
    <string name="space_to_space">\ to\ </string>
    <string name="no_result">No result</string>
    <string name="consult">Consult\ </string>
    <string name="quantity">Quantity</string>
    <string name="hi">Hi  </string>
    <string name="new_product_in">New product in\ </string>
    <string name="add_special_offer">Add special offer</string>
    <string name="actual_offer_price">Actual offer price :\ </string>=
    <string name="exclamation_mark">!</string>
    <string name="euro">€</string>
    <string name="ordered">\ ordered</string>
    <string name="clear_basket">Clear the basket</string>
    <string name="remove">Remove</string>
    <string name="validate_quantity">Validate quantity</string>
    <string name="sell_style_question">What would you want to sell ?</string>
    <string name="food">Food</string>
    <string name="clothing">Clothing</string>
    <string name="technology">Technology</string>
    <string name="create_my_store">Create my store</string>
    <string name="sport">Sport</string>
    <string name="selfcare">Selfcare</string>
    <string name="music">Music</string>
    <string name="what_are_you_interested_in">What are you interested in? </string>
    <string name="new_price">New price</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_to_basket">Add to basket </string>
    <string name="costume">Costume </string>
</resources>
