<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_fournisseur">

    <!---->



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/SportImageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_fournisseur12"
            android:contentDescription="@string/content_description"
            android:padding="15dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,SpeakableTextPresentCheck,UsingOnClickInXml"
            tools:layout_editor_absoluteY="1dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/Basané"
            android:background="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_basane"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="myCategories"
            android:text="@string/my_categories"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/logo_categories"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_basane"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="myProducts"
            android:text="@string/my_products"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/logo_my_products"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_basane"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="orders"
            android:text="@string/orders"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/logo_list_white"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/store_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/log_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/leave_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/content_description"
            android:focusable="auto"
            android:onClick="disconnect"
            app:backgroundTint="@color/Basané"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_logout"
            tools:ignore="SpeakableTextPresentCheck" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>