<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:id="@+id/constraintLayout">

       <!-- <ImageView
            android:id="@+id/SportImageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/fournissuer_1"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,SpeakableTextPresentCheck,UsingOnClickInXml"
            tools:layout_editor_absoluteY="1dp" /> -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_percent="0.8"
            app:layout_constraintWidth_percent="0.95" android:clipChildren="false"
            app:layout_constraintHeight_max="wrap" android:maxWidth="500dp" app:layout_constraintWidth_max="wrap">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:maxWidth="500dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                >


                <TextView
                    android:id="@+id/title_identification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="sans-serif-light"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="36sp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_identification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white"
                    android:elevation="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white"
                    android:elevation="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/first_name"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/find_stores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white"
                    android:elevation="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/last_name"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pwd_identification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/round_white"
                    android:elevation="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_pwd_confirm_identification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_white"
                    android:elevation="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password2"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <CheckBox
                            android:id="@+id/checkbox_is_merchant_identification"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:buttonTint="@color/lightBlue"
                            android:checked="false"
                            android:text="@string/is_merchant"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/checkbox_stay_connected_identification"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                        <CheckBox
                            android:id="@+id/checkbox_stay_connected_identification"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_weight="1"
                            android:buttonTint="@color/lightBlue"
                            android:checked="true"
                            android:text="@string/stay_connected"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/submit_identification"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/button_round_gold"
                        android:elevation="10dp"
                        android:maxWidth="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0"
                        app:layout_constraintHorizontal_bias="0.493"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        app:layout_constraintWidth_percent="0.8"
                        tools:ignore="SpeakableTextPresentCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/toggle_identification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="sans-serif"
                    android:minHeight="24dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintHeight_percent="0"
                    app:layout_constraintWidth_percent="0.8"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>